app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app
  namespace: default
spec:
  selector:
    matchLabels:
      run: app
  template:
    metadata:
      labels:
        run: app
    spec:
      containers:
      - image: punitporwal07/apache4ingress:1.0
        imagePullPolicy: IfNotPresent
        name: app
        ports:
        - containerPort: 80
          protocol: TCP
