app2-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app2
  namespace: default
spec:
  selector:
    matchLabels:
      run: app2
  template:
    metadata:
      labels:
        run: app2
    spec:
      containers:
      - image: punitporwal07/apache4ingress:2.0
        imagePullPolicy: IfNotPresent
        name: app2
        ports:
        - containerPort: 80
          protocol: TCP
