app4-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app4
  namespace: default
spec:
  selector:
    matchLabels:
      run: app4
  template:
    metadata:
      labels:
        run: app4
    spec:
      containers:
      - image: gcr.io/google-samples/hello-app:2.0
        imagePullPolicy: IfNotPresent
        name: app4
        ports:
        - containerPort: 8080
          protocol: TCP
