app4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app4
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: app4
  type: NodePort
