app1-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fanout-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: app
          servicePort: 80
      - path: /2/*
        backend:
          serviceName: app2
          servicePort: 80
