app2-basic-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic2-ingress
spec:
  backend:
    serviceName: app2
    servicePort: 80
