app2-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: app
          servicePort: 80
      - path: /v2
        backend:
          serviceName: app2
          servicePort: 80
