app3-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress3
  labels:
    app: my-docker-apps
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: app
          servicePort: 80
      - path: /v2
        backend:
          serviceName: app2
          servicePort: 80
